--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
 		"svelte": "^3.29.0",
 		"vite": "^2.1.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"svelt-yjs": "^1.1.0",
+		"y-webrtc": "^10.1.8",
+		"yjs": "^13.5.3"
+	}
 }
